# K2-Vendor-Verifier

./: .gitattributes  .gitignore  README.md  f1_score.py  pyproject.toml  tool_calls_eval.py
evaluation-dataset/tool-calls/: kimi-k2-0905-preview_results.jsonl  kimi-k2-thinking_results.jsonl  samples.jsonl
src/kimi_vendor_verifier/: __init__.py  cli.py  models.py  tool_calls_eval.py
